# vpipe

./: .gitignore  .gitmodules  CMakeLists.txt  EXAMPLES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  vpipe-version.cc
apple-silicon/: CMakeLists.txt  aligned-allocator.h  tensor-beat.h  tensor-storage.cc  tensor-storage.h
apple-silicon/coreml/: CMakeLists.txt  coreml-model-manager.cc  coreml-model-manager.h
apple-silicon/coreml/coreml-cpp/: CoreML.hpp  CoreMLArrayBatchProvider.hpp  CoreMLBatchProvider.hpp  CoreMLDefines.hpp  CoreMLDictionaryConstraint.hpp  CoreMLDictionaryFeatureProvider.hpp  CoreMLFeatureDescription.hpp  CoreMLFeatureProvider.hpp  CoreMLFeatureValue.hpp  CoreMLImageConstraint.hpp  CoreMLModel.hpp  CoreMLModelAsset.hpp  CoreMLModelConfiguration.hpp  CoreMLModelDescription.hpp  CoreMLMultiArray.hpp  CoreMLMultiArrayConstraint.hpp  CoreMLNumericConstraint.hpp  CoreMLParameterDescription.hpp  CoreMLParameterKey.hpp  CoreMLPredictionOptions.hpp  CoreMLPrivate.hpp  CoreMLSequence.hpp  CoreMLSequenceConstraint.hpp  CoreMLState.hpp  CoreMLUpdateContext.hpp  CoreMLUpdateProgressHandlers.hpp  CoreMLUpdateTask.hpp  coreml-private.cc
apple-silicon/metal-compute/: CMakeLists.txt  buffer-view.h  command-stream.cc  command-stream.h  compute-encoder.cc  compute-encoder.h  compute-library.cc  compute-library.h  event.cc  event.h  fence.cc  fence.h  image-ops.cc  image-ops.h  metal-compute.cc  metal-compute.h  shared-buffer.cc  shared-buffer.h  tensor-beat-bridge.cc  tensor-beat-bridge.h  texture-cv-bridge.mm  texture.cc  texture.h
apple-silicon/metal-compute/cmake/: embed-metallib.cmake  vpipe-metal-kernel.cmake
apps/: CMakeLists.txt
apps/vpipe/: CMakeLists.txt  main.cc
apps/web-ui/: CMakeLists.txt  db-browser.cc  db-browser.h  embedded-assets.h  http-server.cc  http-server.h  main.cc  model-browser.cc  model-browser.h  session-api.cc  session-api.h  startup-checks-mac.mm  startup-checks.cc  startup-checks.h  system-status.cc  system-status.h  tls-context.cc  tls-context.h  web-ui-delegate.cc  web-ui-delegate.h  web-ui-log-delegate.cc  web-ui-log-delegate.h
apps/web-ui/cmake/: embed-web-assets.cmake
apps/web-ui/web/: index.html
apps/web-ui/web/css/: app.css
apps/web-ui/web/js/: api.js  app.js  dom.js  fs-dialog.js  fs-list.js  graph.js  i18n.js  icons.js  markdown.js  status-bar.js  theme.js
apps/web-ui/web/js/views/: composer.js  database.js  file-browser.js  hls-video.js  io-workspace.js  log.js  pipeline-manager.js  preview-video.js  profiler.js  settings.js  user-io.js
cmake/: build-lmdb.cmake  build-nanobind.cmake  build-pugixml.cmake  find-ffmpeg.cmake  gen-api-doc.py  gen-stages-doc.py  generate-version.cmake  vpipe-embed-metallib.cmake  vpipeConfig.cmake.in  vpipePluginHelpers.cmake
common/: CMakeLists.txt  beat-payload-intf.h  command-sandbox.cc  command-sandbox.h  credential-cipher.cc  credential-cipher.h  credential-store.cc  credential-store.h  db-log-delegate.cc  db-log-delegate.h  encoded-segment.h  ffmpeg-libraries.cc  ffmpeg-libraries.h  ffmpeg-log-tap.cc  ffmpeg-log-tap.h  flex-data.cc  flex-data.h  graph.cc  graph.h  host-identity.cc  host-identity.h  host-net.cc  host-net.h  i18n.cc  i18n.h  job.h  library-handle.cc  library-handle.h  lmdb-cursor.cc  lmdb-cursor.h  lmdb-db.cc  lmdb-db.h  lmdb-env.cc  lmdb-env.h  lmdb-txn.cc  lmdb-txn.h  media-decode.cc  media-decode.h  media-line.cc  media-line.h  (+44 more)
docs/: PLUGINS.md
examples/plugin-sdk/: CMakeLists.txt  README.md  example-stage.cc
generative-models/: CMakeLists.txt  chat-template.cc  chat-template.h  context-manager.cc  context-manager.h  generative-model-manager.cc  generative-model-manager.h  loaded-language-model.cc  loaded-language-model.h  lora-fusion.cc  lora-fusion.h  metal-token-muxer.cc  metal-token-muxer.h  model-exec-registry.cc  model-exec-registry.h  model-exec.h  model-loader.cc  model-loader.h  sampler.cc  sampler.h  token-muxer.h  tokenizer.cc  tokenizer.h
include/: CMakeLists.txt
interfaces/: CMakeLists.txt  log-delegate-intf.cc  log-delegate-intf.h  session-context-intf.h  ui-delegate-intf.h
pipeline/: CMakeLists.txt  clock-domain.cc  clock-domain.h  edge-reader.cc  edge-reader.h  feedback-rx-stage.cc  feedback-rx-stage.h  feedback-tx-stage.cc  feedback-tx-stage.h  oport-buffer.cc  oport-buffer.h  pipeline-handle-impl.h  pipeline-handle.cc  pipeline-runtime.cc  pipeline-runtime.h  pipeline-spec.cc  pipeline-spec.h  pipeline.cc  pipeline.h  runtime-context.h  stage-config.cc  stage-config.h  stage-registry.cc  stage-registry.h  stage-spec.cc  stage-spec.h  stage.cc  stage.h  typed-stage.h
plugin/: CMakeLists.txt  plugin-abi.h  plugin-context.cc  plugin-context.h  plugin-manager.cc  plugin-manager.h
python/: CMakeLists.txt  _vpipe.cc
stages/: CMakeLists.txt  audio-segment-stage.cc  audio-segment-stage.h  audio-tagging-stage.cc  audio-tagging-stage.h  audio-transcribe-stage.cc  audio-transcribe-stage.h  beats-audioset-labels.h  call-stage.cc  call-stage.h  ced-audioset-labels.h  chrono-stage.cc  chrono-stage.h  coreml-inference-stage.cc  gpu-telemetry.h  (+69 more)
tests/: CMakeLists.txt  minitest-main.cc  minitest.cc  minitest.h
tests/api/: CMakeLists.txt  basics.cc
tests/plugins/echo-plugin/: echo-plugin.cc
tests/plugins/metal-kernel/: plugin_probe.metal
tests/unit-tests/: CMakeLists.txt  audio-capture-stage.cc  audio-encode-stage.cc  audio-segment-stage.cc  audio-tagging-stage.cc  audio-transcribe-stage.cc  byte-track-stage.cc  call-stage.cc  chrono-shell-stages.cc  clock-domain.cc  command-sandbox.cc  coreml-cpp.cc  coreml-inference-stage.cc  coreml-model-manager.cc  credential-cipher.cc  credential-store.cc  detection-overlay-stage.cc  feedback-pair.cc  ffmpeg-libraries.cc  ffmpeg-log-tap.cc  file-sandbox.cc  flex-data.cc  flux2-smoke.cc  gemma-bench-driver.cc  gemma4-unified-embedder.cc  gguf-convert.cc  graph-move-iport.cc  hls-broadcast-stage.cc  host-identity.cc  i18n.cc  image-resample-stage.cc  krea2-dit-quant.cc  krea2-dit.cc  krea2-encoder.cc  krea2-lora.cc  krea2-sampler.cc  krea2-t2i.cc  krea2-vae.cc  library-handle.cc  llm-chat-template.cc  (+100 more)
(+177 files in other folders)
