add_subdirectory(api)
add_subdirectory(unit-tests)

set(LOCAL_TEST_SOURCES
  minitest.cc
  minitest-main.cc
)
set(LOCAL_TEST_HEADERS
  minitest.h
)

list(TRANSFORM LOCAL_TEST_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(TRANSFORM LOCAL_TEST_HEADERS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(APPEND VPIPETEST_SOURCES ${LOCAL_TEST_SOURCES})
list(APPEND VPIPETEST_HEADERS ${LOCAL_TEST_HEADERS})
set(VPIPETEST_SOURCES ${VPIPETEST_SOURCES} PARENT_SCOPE)
set(VPIPETEST_HEADERS ${VPIPETEST_HEADERS} PARENT_SCOPE)
